--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Space+Mono:wght@400;700&display=swap");
 
 @tailwind base;
 
@@ -22,11 +22,11 @@ body,
 .app {
   height: 100%;
   font-family: "Manrope", sans-serif;
-  background-color: #020A13;
-  @apply text-gray-100 bg-black-100
+  background-color: #020a13;
+  @apply text-gray-100 bg-black-100;
 }
 
 nav {
   font-family: "Space Mono", sans-serif;
-  @apply text-gray-100
+  @apply text-gray-100;
 }
